# airflow-ml

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
airflow_variables/: variables.json
dags/: 01_etl_pipeline.py  02_ml_pipeline.py  03_data_pipeline.py  all_pipelines.py  etl_ml_pipeline.py  test.py
dags/sql/: create_table_agg_dep_delay_by_date.sql
dags/utils/: __init__.py  config_params.py  db_handler.py  etl.py  ml.py  postgres_cli.py
notebooks/: ML_ARIMA.ipynb  ML_EstadisticaDescriptiva.ipynb  ML_Insolation Forest BAK.ipynb  ML_Insolation Forest.ipynb  ML_Seasonal-Trend decomposition using Loess (STL).ipynb  ML_XGBoost.ipynb  ML_manual.ipynb  pipelines_1.ipynb  pipelines_2.ipynb  upsert.ipynb
tests/: test_airflow_ml.py  test_e2e_ml.py
