[tool.poetry]
name = "airflow-ml"
version = "0.1.0"
description = ""
authors = ["Jorge Danussi <jdanussi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
