[tool.poetry]
name = "airflow-ml"
version = "0.1.0"
description = ""
authors = ["Jorge Danussi <jdanussi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
pylint = "^2.15.8"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
